--- a/views/teacher/class.ejs
+++ b/views/teacher/class.ejs
@@ -28,11 +28,11 @@
 <%- include('../layouts/header') %>
 <br><br><br>
 
-<div id = "content" class="container" style="background-color: #E2D9E5">
+<div id = "content" class="container" style="background-color: #cad19f;">
 
     <%- include('./class-Student') %>
 
-    <div class="box mb-5 shadow" style="background-color: #E2D9E5;">
+    <div class="box mb-5 shadow" style="background-color: #cad19f;">
         <!-- <table class="table" style="background-color: #9C7EB7;">
             <thead>
               <tr>
@@ -54,9 +54,9 @@
     </div>
 
     <h1>Class Management</h1>
-    <div class="row" style="background-color: #E2D9E5">
+    <div class="row" style="background-color: #cad19f;">
         <div class="col-sm">
-            <div class="box  mb-5 shadow" style="background-color: #9C7EB7;">
+            <div class="box  mb-5 shadow" style="background-color: #bd7b67;">
                 <table class="table">
                     <thead>
                       <tr>
