--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -176,19 +176,20 @@
                             </div>
                             <hr>
                             <% if (TicketBooking_SystemPercent === 50) { %>
-                                <p>Project Quiz 1 ปลดล็อกแล้ว!</ย>
+                                <p style="margin: 0;">Project Quiz 1 ปลดล็อกแล้ว!</ย>
                             <% }%>
                             <% if (TicketBooking_SystemPercent === 75) { %>
-                                <p>Project Quiz 1 ปลดล็อกแล้ว!</p>
+                                <p style="margin: 0;">Project Quiz 1 ปลดล็อกแล้ว!</p>
                             <% }%>
                             <% if (TicketBooking_SystemPercent === 100) { %>
-                                <p>Project Quiz 1 ปลดล็อกแล้ว!</p>
+                                <p style="margin: 0;">Project Quiz 1 ปลดล็อกแล้ว!</p>
                             <% }%>
-                            
-                            <p style="font-size: 14px;">Project Quiz 1 : <%= PrjQuiz1Score %></p>
-                            <p style="font-size: 14px;">Project Quiz 2 : <%= PrjQuiz2Score %></p>
-                            <p style="font-size: 14px;">Project Quiz 3 : <%= PrjQuiz3Score %></p>
-                            <p>คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p>
+                            <p style="margin: 0;">คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p> <br>
+                            <div style="margin-left: 15px;">
+                                <p style="font-size: 14px;">Project Quiz 1 : <%= PrjQuiz1Score %></p>
+                                <p style="font-size: 14px;">Project Quiz 2 : <%= PrjQuiz2Score %></p>
+                                <p style="font-size: 14px;">Project Quiz 3 : <%= PrjQuiz3Score %></p>
+                            </div>
                             <hr>
                         </div>
                         <div class="boxbax2">
@@ -269,7 +270,7 @@
                     <div  class="group2">
                         <div></div>
                         <div>
-                            <h4 class="chakra-petch-regular">Compitency</h4>   
+                            <h4 class="chakra-petch-regular">Competency</h4>   
                             <div style="height: 400px;">
                                 <div class="chartCard">
                                     <div class="chartBox" style="background-color: #e2ddc8; border: solid #fff;">
