--- a/views/student/layouts/project-middle.ejs
+++ b/views/student/layouts/project-middle.ejs
@@ -38,6 +38,8 @@
     border: solid #fb6ff6;
     box-shadow: 0 0 15px 5px #fc0ff5;
   }
+  p { color: #000000;}
+  a {color: #565a7b;}
 </style>
 
 <!-- MIDDLE 1 -->
@@ -62,23 +64,29 @@
                             <div class="projectbox wrapbox">
                               <p>Project Quiz 1</p>
                               <% if(RecommendaResult[0].TicketBooking_SystemPercent >= 50) { count = count-1%> <%# Follow node %> 
-                                <a href="/project-Ticket_Booking_System" style="color:rgb(255, 255, 255)">click</a>
+                                <a href="/project-Ticket_Booking_System">click</a>
                                 <br><br><p><%= PrjQuiz1Score %></p>
-                              <% } %>
+                              <% }else{ %>
+                                <p style="font-size: 14px; color: #535353;">ทำแบบทดสอบบทที่ 1-4 เพื่อปลดล็อก</p>
+                                <% } %>
                             </div>
                             <div class="projectbox wrapbox">
                               <p>Project Quiz 2</p>
                               <% if(RecommendaResult[0].PointofSales_SystemPercent >= 75) {count = count-1 %> <%# Follow node %> 
-                                  <a href="/project-Point_of_Sales_System" style="color:rgb(255, 255, 255)">click</a>
+                                  <a href="/project-Point_of_Sales_System">click</a>
                                   <br><br><p><%= PrjQuiz2Score %></p>
-                              <% } %>
+                                  <% }else{ %>
+                                    <p style="font-size: 14px; color: #535353;">ทำแบบทดสอบบทที่ 5-6 เพื่อปลดล็อก</p>
+                                    <% } %>
                             </div>
                             <div class="projectbox wrapbox">
                               <p>Project Quiz 3</p>
                               <% if(RecommendaResult[0].ProjectQUIZ3Percent === 100) {count = count-1 %> <%# Follow node %> 
-                                <a href="/project-Project_QUIZ3" style="color:rgb(255, 255, 255)">click</a>
+                                <a href="/project-Project_QUIZ3">click</a>
                                 <br><br><p><%= PrjQuiz3Score %></p>
-                              <% } %>
+                                <% }else{ %>
+                                  <p style="font-size: 14px; color: #535353;">ทำแบบทดสอบบทที่ 7-8 เพื่อปลดล็อก</p>
+                                  <% } %>
                             </div>
                           <% } %>
                             
