--- a/views/index/index_viewer.ejs
+++ b/views/index/index_viewer.ejs
@@ -17,21 +17,17 @@
     }
   }
   .button {
-    color: #fff;
-    background-color: #b957ce;
-    width: 150px;
-    border: solid 3px #ff4cbf;
-    box-shadow: 0 0 15px #b957ce;
+    color: #000000;
+    background-color: #bd7b67;
+    border: solid #000000;
   }
   .button:hover {
-    color: #38fbdb;
-    box-shadow: 0 0 15px 5px #fc0ff5;
+    border: solid #bd7b67;
+    box-shadow: 0 0 10px 5px #fff;
   }
-  body {
-    box-shadow: inset 0 0 15px 5px #ff4cbf;
-  }
+
 </style>
-<body class="quantico-regular" style="background-color: #122c5a;" >
+<body class="quantico-regular" style="background-color: #cad19f;" >
 <main>
 <%- include('../layouts/navbar-viewer') %>  
 
@@ -43,7 +39,6 @@
   <button class="button" onclick="document.location='/auth/login';">Get Started</button>
 </div>
 
-<img id="bg" src="images/bg.jpg">
 <img id="moon" src="https://img.freepik.com/free-psd/3d-nft-icon-developer-male-illustration_629802-6.jpg?t=st=1712830382~exp=1712833982~hmac=d33182ac3e551ce030e81cea1feedf41b95303d997536c7d534fa4931e6495a4&w=1480">
 
 <section class="sticky">
