--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -70,13 +70,12 @@
   
   .button {
     color: #000000;
-    background-color: #d272e7;
+    background-color: #cad19f;
     border: solid #000000;
   }
   .button:hover {
-    color: #ffb3fc;
-    border: solid #fb6ff6;
-    box-shadow: 0 0 10px 5px #fc0ff5;
+    border: solid #bd7b67;
+    box-shadow: 0 0 10px 5px #fff;
   }
 </style>
 
@@ -85,7 +84,7 @@
             <div class="accordion" id="accordionParentSyntax">
                 <!--   Introduce -->
                 <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                    <h1>Lesson</h1>
+                    <h1 style="color: #96534a;">Lesson</h1>
                     
                     <!--   ## -->
                     <div class="box bg-light  mb-5 shadow" style="border-radius: 5px;">
