--- a/views/student/layouts/course-middle_Score.ejs
+++ b/views/student/layouts/course-middle_Score.ejs
@@ -26,8 +26,8 @@ if(Object.keys(StudentAnswer).length === 0) {
 else {
     %>
     <div id = "content" class="container">
-        <h1 id = 'content'> Assignment Status </h1>   
-        <h5 >ช่องที่เป็นสีแดง <button class="boxcolor">  </button> ให้คลิกเข้าไปฝึกทำแบบฝึกหัดเพิ่มเติม</h5>
+        <h1 style="color: #96534a;" id = 'content'> Assignment Status </h1>   
+        <p>ช่องที่เป็นสีแดง <button class="boxcolor">  </button> ให้คลิกเข้าไปฝึกทำแบบฝึกหัดเพิ่มเติม</p>
 
         <div class="box bg-light  mb-5 shadow" style="padding: 10px; border-radius: 5px;">
         <table class="table text-center">
