--- a/views/student/layouts/navbar.ejs
+++ b/views/student/layouts/navbar.ejs
@@ -24,7 +24,7 @@
     .strict { line-break: strict; }
     .anywhere { line-break: anywhere; }
     .navshadow {
-      box-shadow: 0 0 15px 5px #38fbdb;
+      box-shadow: 0 0 15px 5px #cd7161;
     } 
 </style>
 
