--- a/public/stylesheets/viewer.css
+++ b/public/stylesheets/viewer.css
@@ -5,8 +5,7 @@
     font-weight: 400;
     font-style: normal;
 }
-h1 {color: #38fbdb;}
-h2 {color: #f1f1f1;}
+h1,h2 {color: #96534a;}
 
 
 body {
@@ -18,7 +17,7 @@ body {
     z-index: 100;
     top: 35%;
     left: 55%;
-    text-shadow: 0 0 10px #38fbdb;
+
 
 }
 .get-started-btn {
