--- a/views/Auth/login.ejs
+++ b/views/Auth/login.ejs
@@ -11,27 +11,27 @@
     font-style: normal;
 }
   .contentshadow {
-    box-shadow: 0 0 15px 5px #5c58b6;
+    box-shadow: 0 0 15px 5px #bd7b67;
   }
   .button {
     color: #fff;
-    background-color: #5c58b6;
+    background-color: #bd7b67;
     width: 150px;
-    border: solid 3px #ff4cbf;
+    border: solid 3px #000;
   }
   .button:hover {
-    color: #38fbdb;
-    box-shadow: 0 0 10px 1px #ff4cbf;
+    color: #fff;
+    box-shadow: 0 0 10px 1px #bd7b67;
   }
 </style>
-<body class="quantico-regular" style="background-color: #122c5a; box-shadow: inset 0 0 15px 5px #ff4cbf;">
+<body class="quantico-regular" style="background-color: #cad19f;">
 
 <%- include('../layouts/navbar-viewer') %>
 <br><br><br><br>
 <div id="content" class="container" >
   <div class="card text contentshadow">
-      <div class="card-header text-center" style="background-color: #5c58b6;">
-        <h2 style="color: #38fbdb;">Login</h2>
+      <div class="card-header text-center" style="background-color: #bd7b67;">
+        <h2 style="color: #fff;">Login</h2>
       </div>
       <div class="card-body">
         <form action="/auth/login" method="post" class="lg-form">
@@ -45,7 +45,7 @@
                 <input class="form-control" type="password" name="password" id="password" placeholder="Password"/>
               </div>
               <br>
-              <button style="background-color: #5c58b6;" input type="submit" value="Login" class="button">Login</button>
+              <button style="background-color: #bd7b67;" input type="submit" value="Login" class="button">Login</button>
         </form>
       </div>
       <div class="card-footer text-muted">
