--- a/views/student/layouts/project-middle.ejs
+++ b/views/student/layouts/project-middle.ejs
@@ -30,16 +30,16 @@
   }
   .button {
     color: #000000;
-    background-color: #b957ce;
+    background-color: #cad19f;
     border: solid #000000;
   }
   .button:hover {
-    color: #ffb3fc;
-    border: solid #fb6ff6;
-    box-shadow: 0 0 15px 5px #fc0ff5;
+    border: solid #bd7b67;
+    box-shadow: 0 0 15px 5px #fff;
   }
   p { color: #000000;}
-  a {color: #565a7b;}
+  a {color: #96534a;
+  }
 </style>
 
 <!-- MIDDLE 1 -->
@@ -48,7 +48,7 @@
 <!--   C Language -->
         <div class="accordion" id="accordionParentSyntax">
             <!--   Introduce -->
-            <div id="collapseIntroduce" class="accordion-collapse show project" style="background-color: #bd7b67; box-shadow: 0 0 15px 5px #38fbdb;" data-bs-parent="#accordionParentSyntax">
+            <div id="collapseIntroduce" class="accordion-collapse show project shadow" style="background-color: #bd7b67;" data-bs-parent="#accordionParentSyntax">
                 <h1>Project</h1> <!--
                 <ol class="breadcrumb" style="background-color: #3a4e93;">
                     <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
