--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -23,6 +23,7 @@
         }
 
         .box-skill {
+            width: 600px;
             background-color: #9C7EB7;
         }
 
@@ -30,6 +31,10 @@
 
     <link rel='stylesheet' href='stylesheets/home.css' />
     <link rel='stylesheet' href='stylesheets/chart.css' />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js" 
+    integrity="sha512-L0Shl7nXXzIlBSUUPpxrokqq4ojqgZFQczTYlGjzONGTDAcLremjwaWv5A+EDLnxhQzY5xUZPWLOLqYRkY0Cbw==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
     <title>Home</title>
 </head>
 
@@ -40,6 +45,7 @@
 
 <br><br><br>
     <div id = "content" class="container" style="background-color: #cad19f;">
+        <div  class="group2">
         <div class="box-skill" style="background-color: #cad19f;" >
         <h1>Student Summary Skills</h1>
         <div class="box mb-5" style="background-color: #cad19f">
@@ -76,6 +82,54 @@
         </div>
         </div>
         
+        <div>
+            <h4 class="chakra-petch-regular" style="width: 100px;">Skill</h4>   
+            <div >
+                <div class="chartCard">
+                    <div class="chartBox" style="background-color: #e2ddc8; border: solid #fff;">
+                        <canvas id="myChart"></canvas>
+                    </div>
+                </div>
+                <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
+                <script>
+                
+                       
+                    
+                    Chart.defaults.borderColor = '#fff';
+                    const data = {
+                        labels: ['Knowledge', 'Tracing', 'Explaining','Writing'],
+                        datasets: [{
+                            data: [15,20,15,30],
+                            label: "Pre-test",
+                            borderColor: '#80599f',
+                            backgroundColor: '#80599f49',
+                        },{
+                            data: [50,55,45,40],
+                            label: "Post-test",
+                            borderColor: '#d272e7',
+                            fill: true,
+                            backgroundColor: '#d272e737',
+                        }]
+                    };
+                    // config 
+                    const config = {
+                        type: 'radar',
+                        data,
+                        options: {}
+                        };
+                    // render init block
+                    const myChart = new Chart(
+                        document.getElementById('myChart'),
+                        config
+                    );
+                    
+                    // Instantly assign Chart.js version
+                    const chartVersion = document.getElementById('chartVersion');
+                    chartVersion.innerText = Chart.version;
+                </script>
+            </div>
+        </div>  
+        </div>
         <div class="row" >
             <div class="col-sm" >
                 <div class="box  mb-5" style="background-color: #cad19f;">
@@ -116,7 +170,7 @@
 <br>
 
 
-<script src="/javascripts/chart_teacher.js"></script>
+<!-- <script src="/javascripts/chart_teacher.js"></script> -->
 </body>
 
 </html>
