--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -188,10 +188,12 @@
                                 <p style="margin: 0;">Project Quiz 1 ปลดล็อกแล้ว!</p>
                             <% }%>
                             <p style="margin: 0;">คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p> <br>
+
+                            <p style="margin: 3px;">คะแนน Project Quiz</p>
                             <div style="margin-left: 15px;">
-                                <p style="font-size: 14px;">Project Quiz 1 : <%= PrjQuiz1Score %></p>
-                                <p style="font-size: 14px;">Project Quiz 2 : <%= PrjQuiz2Score %></p>
-                                <p style="font-size: 14px;">Project Quiz 3 : <%= PrjQuiz3Score %></p>
+                                <p style="font-size: 14px; margin: 3px;">Quiz 1 : <%= PrjQuiz1Score %></p>
+                                <p style="font-size: 14px; margin: 3px;">Quiz 2 : <%= PrjQuiz2Score %></p>
+                                <p style="font-size: 14px; margin: 3px;">Quiz 3 : <%= PrjQuiz3Score %></p>
                             </div>
                             <hr>
                         </div>
