--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -84,7 +84,7 @@
             <div class="accordion" id="accordionParentSyntax">
                 <!--   Introduce -->
                 <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                    <h1 style="color: #96534a;">Lesson</h1>
+                    <h1 style="color: #000;">Lesson</h1>
                     
                     <!--   ## -->
                     <div class="box bg-light  mb-5 shadow" style="border-radius: 5px;">
