--- a/views/student/layouts/recommendation.ejs
+++ b/views/student/layouts/recommendation.ejs
@@ -1,6 +1,6 @@
 <div id = "content" class="container" style="border-radius: 5px;">
         <br>
-        <h1 style="color: #96534a;" id = 'content'><i class="far fa-sun"></i>Learning Recommendation </h1> 
+        <h1 style="color: #000;" id = 'content'><i class="far fa-sun"></i>Learning Recommendation </h1> 
         <div style="padding: 10px; border-radius: 5px;" class="box bg-light  mb-5 shadow" >
     
             <div class="row">
