--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -170,3 +170,4 @@ progress{border: solid #96534a;}
 @media (max-width: 1500px) {
     .group2 {display: block;}
     html {height: fit-content;}
+}
