--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -195,81 +195,11 @@
                                 <p style="font-size: 14px; margin: 3px;">Quiz 2 : <%= PrjQuiz2Score %></p>
                                 <p style="font-size: 14px; margin: 3px;">Quiz 3 : <%= PrjQuiz3Score %></p>
                             </div>
-                            <hr>
                         </div>
-                        <div class="boxbax2">
-                            <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
-                                <p style="margin: 0;">Post-test</p>
-                                <% if (TicketBooking_SystemPercent === 13) { %>
-                                    <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด<br> (1 แบบทดสอบ)</p>
-                                <% }%>
-                                <% if (TicketBooking_SystemPercent === 25) { %>
-                                    <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด<br><br> (2 แบบทดสอบ)</p>
-                                <% }%>
-                                <% if (TicketBooking_SystemPercent === 38) { %>
-                                    <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด (3 แบบทดสอบ)</p>
-                                <% }%>
-                                <% if (TicketBooking_SystemPercent === 50) { %>
-                                    <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด<br> (4 แบบทดสอบ)</p>
-                                <% }%>
-                                <% if (TicketBooking_SystemPercent === 63) { %>
-                                    <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด<br><br> (5 แบบทดสอบ)</p>
-                                <% }%>
-                                <% if (TicketBooking_SystemPercent === 75) { %>
-                                    <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด (6 แบบทดสอบ)</p>
-                                <% }%>
-                                <% if (TicketBooking_SystemPercent === 88) { %>
-                                    <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด<br> (7 แบบทดสอบ)</p>
-                                <% }%>
-                                <% if (TicketBooking_SystemPercent === 100) { %>
-                                    <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด<br> (8 แบบทดสอบ)</p>
-                                <% }%>
-                                <div class="row mb-3 ">
-                                    <div class="col-sm-10 " style="top:10px">
-                                        <b style="font-size: 12px;">Knowledge: <%= BasicPercent %> /40</b>
-                                        <progress class="progress" max="40" value=<%= BasicPercent %>  </progress>
-                                    </div>
-                                </div>
-                                <div class="row mb-3">
-                                    <div class="col-sm-10 " style="top:10px">
-                                        <b style="font-size: 12px;">Tracing: <%= TracePercent %> /40</b>
-                                        <progress class="progress" max="40" value=<%= TracePercent %> </progress>
-                                    </div>
-                                </div>
-                                <div class="row mb-3">
-                                    <div class="col-sm-10 " style="top:10px">
-                                        <b style="font-size: 12px;">Explaining: <%= ExplainPercent %> /40</b>
-                                        <progress class="progress" max="40" value=<%= ExplainPercent, %> </progress>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>  
+                    
                         
                         
-                        <div class="boxbax2">  
-                            <!--
-                            <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
-                                <p>Pre-test</p>
-                                <div class="row mb-3 ">
-                                    <div class="col-sm-10 " style="top:10px">
-                                        <b style="font-size: 12px;">Knowledge: <%= PreBasicPercent %> /40</b>
-                                        <progress class="progress" max="40" value=<%= PreBasicPercent %>  </progress>
-                                    </div>
-                                </div>
-                                <div class="row mb-3">
-                                    <div class="col-sm-10 " style="top:10px">
-                                        <b style="font-size: 12px;">Tracing: <%= PreTracePercent %> /40</b>
-                                    <progress class="progress" max="40" value=<%= PreTracePercent %>  class="html5 "></progress>
-                                    </div>
-                                </div>
-                                <div class="row mb-3">
-                                    <div class="col-sm-10 " style="top:10px">
-                                        <b style="font-size: 12px;">Explaining: <%= PreExplainPercent %> /40</b>
-                                    <progress class="progress" max="40" value=<%= PreExplainPercent, %>   class="html5 "></progress>
-                                    </div>
-                                </div>
-                            </div>-->
-                        </div>  <br>
+                         <br>
                         
                     </div>
                     <div  class="group2">
@@ -322,6 +252,81 @@
                             </div>
                         </div>                        
                     </div>
+                </div>
+                <div class="group2" style="width: 800px;">
+                    <hr><hr>
+                    <div class="boxbax2">  
+                        <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
+                            <p style="margin: 0;">Pre-test</p>
+                            <div class="row mb-3 ">
+                                <div class="col-sm-10 " style="top:10px">
+                                    <b style="font-size: 12px;">Knowledge: <%= PreBasicPercent %> /40</b>
+                                    <progress class="progress" max="40" value=<%= PreBasicPercent %>  </progress>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-sm-10 " style="top:10px">
+                                    <b style="font-size: 12px;">Tracing: <%= PreTracePercent %> /40</b>
+                                <progress class="progress" max="40" value=<%= PreTracePercent %>  class="html5 "></progress>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-sm-10 " style="top:10px">
+                                    <b style="font-size: 12px;">Explaining: <%= PreExplainPercent %> /40</b>
+                                <progress class="progress" max="40" value=<%= PreExplainPercent, %>   class="html5 "></progress>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="boxbax2">
+                        <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
+                            <p style="margin: 0;">Post-test</p>
+                            <div class="row mb-3 ">
+                                <div class="col-sm-10 " style="top:10px">
+                                    <b style="font-size: 12px;">Knowledge: <%= BasicPercent %> /40</b>
+                                    <progress class="progress" max="40" value=<%= BasicPercent %>  </progress>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-sm-10 " style="top:10px">
+                                    <b style="font-size: 12px;">Tracing: <%= TracePercent %> /40</b>
+                                    <progress class="progress" max="40" value=<%= TracePercent %> </progress>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-sm-10 " style="top:10px">
+                                    <b style="font-size: 12px;">Explaining: <%= ExplainPercent %> /40</b>
+                                    <progress class="progress" max="40" value=<%= ExplainPercent, %> </progress>
+                                </div>
+                            </div>
+                        </div>
+                    </div>  
+                    <div style="margin-left: 10px;">
+                    <% if (TicketBooking_SystemPercent === 13) { %>
+                        <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด<br> (1 แบบทดสอบ)</p>
+                    <% }%>
+                    <% if (TicketBooking_SystemPercent === 25) { %>
+                        <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด<br><br> (2 แบบทดสอบ)</p>
+                    <% }%>
+                    <% if (TicketBooking_SystemPercent === 38) { %>
+                        <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด (3 แบบทดสอบ)</p>
+                    <% }%>
+                    <% if (TicketBooking_SystemPercent === 50) { %>
+                        <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด<br> (4 แบบทดสอบ)</p>
+                    <% }%>
+                    <% if (TicketBooking_SystemPercent === 63) { %>
+                        <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด<br><br> (5 แบบทดสอบ)</p>
+                    <% }%>
+                    <% if (TicketBooking_SystemPercent === 75) { %>
+                        <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด (6 แบบทดสอบ)</p>
+                    <% }%>
+                    <% if (TicketBooking_SystemPercent === 88) { %>
+                        <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด<br> (7 แบบทดสอบ)</p>
+                    <% }%>
+                    <% if (TicketBooking_SystemPercent === 100) { %>
+                        <p style="font-size: 12px;">คะแนนรวมแบบทดสอบบทแรกถึงแบบทดสอบที่ทำล่าสุด<br> (8 แบบทดสอบ)</p>
+                    <% }%></div>
                 </div>
             </div>
 
