--- a/views/teacher/class-Student.ejs
+++ b/views/teacher/class-Student.ejs
@@ -1,5 +1,7 @@
 <h1>Student</h1>
+    <script src="javascripts/gamequiz.js"></script>
     <div class="box mb-5 shadow" style="background-color: #E2D9E5;">
+        
         <table class="table" style="background-color: #9C7EB7;">
             <thead>
               <tr>
