--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -135,55 +135,55 @@
                                         <div id="myDIV1" style="display:none; margin-top: 10px;">
                                             <div class="group5">
                                                 <b style="font-size: 12px; text-align: start;">Knowledge</b>
-                                                <b style="font-size: 12px; text-align: center;"></b>
+                                                <b style="font-size: 12px; text-align: center;"><%= pre1LV1 %>/5 </b>
                                                  <div class="bar">
                                                     <div style="background-color: #a0de87; width: <%= pre1LV1*20 %>px;" class="barValue">
-                                                        <%= pre1LV1 %>/5</div>
+                                                        <%= pre1LV1*20 %>%</div>
                                                 </div>
-                                                <b style="font-size: 12px; text-align: center;"></b>
+                                                <b style="font-size: 12px; text-align: center;"><%= post1LV1 %>/5 </b>
                                                 <div class="bar">
                                                     <div style="background-color: #ffb26f; width: <%= post1LV1*20 %>px;" class="barValue">
-                                                        <%= post1LV1 %>/5</div>
+                                                        <%= post1LV1*20 %>%</div>
                                                 </div>
                                             </div>
                                             <div class="group5">
                                                 <b style="font-size: 12px; text-align: start;">Tracing</b>
-                                                <b style="font-size: 12px; text-align: center;"></b>
+                                                <b style="font-size: 12px; text-align: center;"><%= pre1LV2 %>/5</b>
                                                 <div class="bar">
                                                     <div style="background-color: #a0de87; width: <%= pre1LV2*20 %>px;" class="barValue">
-                                                        <%= pre1LV2 %>/5</div>
+                                                        <%= pre1LV2*20 %>%</div>
                                                 </div>
-                                                <b style="font-size: 12px; text-align: center;"></b>
+                                                <b style="font-size: 12px; text-align: center;"><%= post1LV2 %>/5</b>
                                                 <div class="bar">
                                                     <div style="background-color: #ffb26f; width: <%= post1LV2*20 %>px;" class="barValue">
-                                                        <%= post1LV2 %>/5</div>
+                                                        <%= post1LV2*20 %>%</div>
                                                 </div>
                                             </div>
                                             <div class="group5">
                                                 <b style="font-size: 12px; text-align: start;">Explaining</b>
-                                                <b style="font-size: 12px; text-align: center;"></b>
+                                                <b style="font-size: 12px; text-align: center; color"><%= pre1LV3 %>/5</b>
                                                 <div class="bar">
                                                     <div style="background-color: #a0de87; width: <%= pre1LV3*20 %>px;" class="barValue">
-                                                        <%= pre1LV3 %>/5</div>
+                                                        <%= pre1LV3*20 %>%</div>
                                                 </div>
-                                                <b style="font-size: 12px; text-align: center;"></b>
+                                                <b style="font-size: 12px; text-align: center;"><%= post1LV3 %>/5</b>
                                                 <div class="bar">
                                                     <div style="background-color: #ffb26f; width: <%= post1LV3*20 %>px;" class="barValue">
-                                                        <%= post1LV3 %>/5</div>
+                                                        <%= post1LV3*20 %>%</div>
                                                 </div> 
                                             </div>       
                                             <div class="group5"> 
                                                 <b style="font-size: 12px; text-align: start;">Writing</b>
-                                                <b style="font-size: 12px; text-align: center;"></b>
+                                                <b style="font-size: 12px; text-align: center;"><%= pre1LV4 %>/25</b>
                                                 <div class="bar">
                                                     <div style="background-color: #a0de87; width: <%= pre1LV4*4 %>px;" class="barValue">
-                                                        <%= pre1LV4 %>/25</div>
+                                                        <%= pre1LV4*4 %>%</div>
                                                 </div>
 
-                                                <b style="font-size: 12px; text-align: center;"></b>
+                                                <b style="font-size: 12px; text-align: center;"><%= post1LV4 %>/25</b>
                                                 <div class="bar">
                                                     <div style="background-color: #ffb26f; width: <%= post1LV4*4 %>px;" class="barValue">
-                                                        <%= post1LV4 %>/25</div>
+                                                        <%= post1LV4*4 %>%</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -425,6 +425,7 @@
                                             <div class="group5">
                                                 <b style="font-size: 12px; text-align: end;">Knowledge</b>
                                                 <b style="font-size: 12px; text-align: center;"></b>
+                                                
                                                  <div class="bar">
                                                     <div style="background-color: #a0de87; width: <%= pre4LV1*20 %>px;" class="barValue" ><%= pre4LV1 %>/5</div>
                                                 </div>
