--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -59,7 +59,10 @@ button.btn-secondary {
     display: grid;
     grid-template-columns: 70px 20px 110px 20px 110px;
 }
-
+.group6 {
+    display: grid;
+    grid-template-columns: 70px 20px 110px 20px 110px;
+}
 
 .btn1 {
     padding: 5px;
