--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -189,7 +189,7 @@
                                 <p style="font-size: 12px;">ปัจจุบันทำถึงบทที่ 7</p>
                             <% }%>
                             <% if (TicketBooking_SystemPercent === 100) { %>
-                                <p style="font-size: 12px;">ปัจจุบันทำถึงบทที่ 8</p>
+                                <p style="font-size: 12px;">ทำแบบทดสอบครบทั้ง 8 บทแล้ว</p>
                             <% }%>
                             <div style="display: flex;">
                                 <div class="progress">
@@ -203,10 +203,10 @@
                                 <p style="margin: 0;">Project Quiz 1 ปลดล็อกแล้ว!</p>
                             <% }%>
                             <% if (TicketBooking_SystemPercent === 75) { %>
-                                <p style="margin: 0;">Project Quiz 1 ปลดล็อกแล้ว!</p>
+                                <p style="margin: 0;">Project Quiz 2 ปลดล็อกแล้ว!</p>
                             <% }%>
                             <% if (TicketBooking_SystemPercent === 100) { %>
-                                <p style="margin: 0;">Project Quiz 1 ปลดล็อกแล้ว!</p>
+                                <p style="margin: 0;">Project Quiz 3 ปลดล็อกแล้ว!</p>
                             <% }%>
                             <p style="margin: 0;">คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p> <br>
 
